# glacier-flow-model

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  README.rst  check.sh  install.sh  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gdal-stable-test.yml  gdal-unstable-test.yml  gdal.yml  package-check.yml  package-publish.yml  test-gdal-stable.yml  test-gdal-unstable.yml  test-poetry.yml  test.yml
data/: DEM.tif
docs/: environment.yml
docs/source/: conf.py  glacier_flow_model.data.rst  glacier_flow_model.fracd8.rst  glacier_flow_model.rst  glacier_flow_model.utils.rst  index.rst  installation.rst  modules.rst  requirements.txt
glacier_flow_model/: __init__.py  base.py  model.py
glacier_flow_model/data/: __init__.py  access.py  aletsch.tif  dem.tif
glacier_flow_model/fracd8/: __init__.py  direction.py  flow.py  infinite.py  limited.py
glacier_flow_model/utils/: __init__.py  hillshade.py  store.py
src/: GFM.py  GlacierFlowModel.py  GlacierFlowModelClass.py  setup.py
tests/: test_data.py  test_fracd8.py  test_model.py  test_utils.py
