[tool.poetry]
name = "glacier-flow-model"
version = "0.3.2"
description = "Modeling glaciers on a digital elevation model based on mass balance and a modified D8 flow algorithm applied to ice"
maintainers = ["Merlin Unterfinger <info@munterfinger.ch>"]
authors = [
    "Merlin Unterfinger <info@munterfinger.ch>",
    "Manuel Andreas Luck <manuel.luck@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://pypi.org/project/glacier-flow-model/"
documentation = "https://glacier-flow-model.readthedocs.io/en/latest/"
repository = "https://github.com/munterfi/glacier-flow-model"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.0"
numpy = "^1.19.0"
rasterio = "^1.3.4"
matplotlib = "^3.5.1"
numba = ">=0.55.1,<0.58.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5"
Sphinx = "^7.1.2"
flake8 = "^6.1.0"
tomlkit = "^0.12.1"
codecov = "^2.1.13"
pydata-sphinx-theme = "^0.13.3"
black = {version = "^23.7.0", allow-prereleases = true}
rstcheck = "^6.1.2"
doc8 = "^1.1.1"

[tool.mypy]
ignore_missing_imports = true
exclude = ["^docs\\/source\\/conf\\.py$"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
