[tool.poetry]
name = "glacier-flow-model"
version = "0.4.0"
description = "Modeling glaciers on a digital elevation model based on mass balance and a modified D8 flow algorithm applied to ice"
maintainers = ["Merlin Unterfinger <info@munterfinger.ch>"]
authors = [
    "Merlin Unterfinger <info@munterfinger.ch>",
    "Manuel Andreas Luck <manuel.luck@gmail.com>",
]
license = "MIT"
readme = "README.rst"
homepage = "https://pypi.org/project/glacier-flow-model/"
documentation = "https://glacier-flow-model.readthedocs.io/en/latest/"
repository = "https://github.com/munterfi/glacier-flow-model"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
numba = "^0.58.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
rasterio = "^1.3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
codecov = "^2.1.13"
doc8 = "^1.1.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pydata-sphinx-theme = "^0.14.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
rstcheck = "^6.2.0"
sphinx = "^7.2.6"
tomlkit = "^0.12.3"

[tool.mypy]
ignore_missing_imports = true
exclude = ["^docs\\/source\\/conf\\.py$"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
